--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-<footer class="text-center text-dark py-3"
-        style="background-color: #F8F9FA; position: fixed; bottom: 0; left: 0; right: 0;">
+<footer class="text-center text-dark py-3" style="background-color: #F8F9FA; position: fixed; bottom: 0; left: 0; right: 0;"
+        th:fragment="footer">
     <div class="container-fluid" style="display: flex; justify-content: center; align-items: center;">
         <p>&copy; 2023 <a class="text-dark bold fw-bold" style="text-decoration: none;" th:href="@{/}">fando<span
                 class="text-primary fw-bold">games</span></a> All
