Modified purchase controller, added form and repo

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -31,7 +31,7 @@
                         </div>
                         <p class="card-text" th:text="|Prezzo: €${game.price}|"></p>
                         <div class="d-flex align-items-center">
-                            <a class="btn btn-black border-black mx-2 " th:href="@{/}"><i
+                            <a class="btn btn-black border-black mx-2 " th:href="@{/purchase/create}"><i
                                     class="fa-solid fa-cart-shopping"></i></a>
                         </div>
                     </div>
