--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -1,13 +1,26 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Checkout</title>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/head :: head('Conferma acquisto')">
 </head>
 <body>
-<h1>Checkout</h1>
+<nav th:replace="fragments/navbar :: navbar"></nav>
+
+<h1>Conferma Acquisto</h1>
+
+<div>
+    <h2>Dettagli del Videogioco</h2>
+    <dl>
+        <dt>Titolo:</dt>
+        <dd th:text="${game.title}"></dd>
+
+        <dt>Editor:</dt>
+        <dd th:text="${game.editor}"></dd>
+
+        <dt>Genere:</dt>
+        <dd th:text="${game.genre}"></dd>
+
+    </dl>
+</div>
+
 </body>
 </html>
