--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -151,7 +151,7 @@
         <div class="carousel slide p-5" id="carouselMax">
             <div class="carousel-inner">
                 <div class="carousel-item" th:classappend="${status.index == 0} ? 'active' : ''"
-                     th:each="p, status : ${popular}"
+                     th:each="p : ${popular}"
                 >
 
                     <img alt="game-img" class="img-fluid border border-secondary" th:src="${p.photo}">
